项目配置等相关

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,6 @@ spring.velocity.suffix=.vm
 dataSourceConfig.sourceTagNames=core
 dataSourceConfig.configPath=${boot.conf}/db.properties
 
-data.conf=${boot.conf}/data/
-static.conf=file:F:/etc/nginx/boot/static/
+data.conf=${boot.conf}data/
+command.conf=${boot.conf}command/run_boot.sh
+static.conf=file:/etc/nginx/boot/static/
