--- a/ect/nginx/boot/data/project.json
+++ b/ect/nginx/boot/data/project.json
@@ -1,3 +1,12 @@
 {
-	
+  "test":{
+    "lib":"/root/桌面/TestJar/lib",
+    "mainClass":"com.demo.demo1.Demo1Application",
+    "createTime":"2017-11-30 16:04:35",
+    "log":"/root/桌面/TestJar/run.log",
+    "port":8081,
+    "id":"test",
+    "tag":"Demo1Application",
+    "token":""
+  }
 }
