--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.4.2.RELEASE</version>
+        <groupId>cn.jiangzeyin</groupId>
+        <artifactId>common-parent</artifactId>
+        <version>1.1.6</version>
     </parent>
-    <groupId>cn.jiangzeyin</groupId>
     <artifactId>boot-online</artifactId>
     <version>1.0</version>
     <properties>
@@ -16,6 +15,10 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>cn.jiangzeyin</groupId>
+            <artifactId>common-boot</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
@@ -31,7 +34,6 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.29</version>
         </dependency>
     </dependencies>
     <build>
