--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ boot.conf=/boot-line/
 #order.conf=/yokead_boot/order/
 #shield.conf=${order.conf}shield
 server.session-timeout=1800
-describe=nginx tools
+banner.msg=boot-line
 server.tomcat.basedir=/ztoutiao_boot_tomcat
 spring.profiles.active=dev
 #velocity \u6A21\u677F\u6587\u4EF6\u914D\u7F6E
