--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #\u7A0B\u5E8F\u7AEF\u53E3\u53F7
-server.port=1122
+server.port=2122
 #\u7CFB\u7EDF\u6807\u8BC6
 #nginx.conf=/etc/nginx/conf.d/ad/
+applicationId=boot-line
 boot.conf=/boot-line/
 #order.conf=/yokead_boot/order/
 #shield.conf=${order.conf}shield
