文件上传功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ server.session-timeout=1800
 banner.msg=boot-line
 server.tomcat.basedir=/ztoutiao_boot_tomcat
 spring.profiles.active=dev
+#spring.http.multipart.enabled=false
 #velocity \u6A21\u677F\u6587\u4EF6\u914D\u7F6E
 spring.velocity.charset=UTF-8
 spring.velocity.content-type=text/html
@@ -27,6 +28,7 @@ dataSourceConfig.configPath=${boot.conf}/db.properties
 
 data.conf=${boot.conf}data/
 command.conf=${boot.conf}command/run_boot.sh
-static.conf=file:/${boot.conf}}/static/
+#static.conf=file:${boot.conf}static/
+static.conf=file:/boot-line/static/
 
 interceptor.initPackageName=cn.jiangzeyin.common.interceptor
