--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,8 @@ dataSourceConfig.configPath=${boot.conf}/db.properties
 
 data.conf=${boot.conf}data/
 command.conf=${boot.conf}command/run_boot.sh
-static.conf=file:/${boot.conf}}/static/
+static.conf=file:/${boot.conf}/static/
 
+interceptor.resourceHandler=/static/**
+interceptor.resourceLocation=file:/boot-line/static/
 interceptor.initPackageName=cn.jiangzeyin.common.interceptor
