--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,10 @@
 server.port=2122
 #\u7CFB\u7EDF\u6807\u8BC6
 #nginx.conf=/etc/nginx/conf.d/ad/
-applicationId=boot-line
-boot.conf=/boot-line/
+spring.application.name=boot-line
 #order.conf=/yokead_boot/order/
 #shield.conf=${order.conf}shield
-server.session-timeout=1800
+#server.session-timeout=1800
 banner.msg=boot-line
 spring.profiles.active=dev
 #spring.http.multipart.enabled=false
@@ -20,6 +19,8 @@ spring.velocity.expose-session-attributes=true
 spring.velocity.enabled=true
 spring.velocity.resource-loader-path=classpath:/vm/
 spring.velocity.suffix=.vm
+#boot online \u914D\u7F6E
+boot.conf=/boot-line/
 data.conf=${boot.conf}data/
 command.conf=${boot.conf}command/run_boot.sh
 # \u9759\u6001\u8D44\u6E90
