--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
 
+        <common-boot.version>1.2.5</common-boot.version>
+
     </properties>
     <dependencies>
         <dependency>
             <groupId>cn.jiangzeyin.fast-boot</groupId>
             <artifactId>common-boot</artifactId>
-            <version>1.2.3</version>
+            <version>${common-boot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
