--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,8 +25,8 @@ banner:
 
 #boot online \u914D\u7F6E
 boot-online:
-  data: /boot-line/data/
-  command: /boot-line/command/run_boot.sh
+  data: /boot-online/data/
+  command: /boot-online/command/
 # \u9759\u6001\u8D44\u6E90
 interceptor:
   resourceHandler: /static/**
