--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,12 @@
         <version>1.4.7.RELEASE</version>
     </parent>
     <artifactId>boot-online</artifactId>
+    <name>在线管理系统</name>
+    <inceptionYear>2017</inceptionYear>
     <version>1.0</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-
         <common-boot.version>1.2.23</common-boot.version>
     </properties>
     <dependencies>
