--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.4.7.RELEASE</version>
     </parent>
+    <groupId>cn.jiangzeyin</groupId>
     <artifactId>jpom</artifactId>
     <name>jpom</name>
     <inceptionYear>2017</inceptionYear>
