--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 
-script: "mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V"
+script: "mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V  && mvn cobertura:cobertura"
 
 notifications:
   email: true
