--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <common-boot.version>1.2.23</common-boot.version>
+        <common-boot.version>[1.2.0,1.2.99]</common-boot.version>
     </properties>
     <dependencies>
         <dependency>
