--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,8 @@ banner:
 jpom:
   path: /jpom/
   log: /jpom/log/
+  # 演示模式
+  showDemo: false
 # 静态资源配置
 interceptor:
   resourceHandler: /static/**
