新增白名单目录

--- a/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -13,9 +13,9 @@
       "defaultValue": "/jpom/"
     },
     {
-      "name": "jpom.showDemo",
+      "name": "jpom.safeMode",
       "type": "java.lang.Boolean",
-      "description": "是否以演示模式运行，演示模式不允许修改自己的秘密",
+      "description": "是否以安全模式运行，安全模式不允许修改自己的密码等限制",
       "defaultValue": false
     }
   ]
