--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
             <artifactId>nginxparser</artifactId>
             <version>0.9.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun</groupId>
+            <artifactId>tools</artifactId>
+            <version>${java.version}</version>
+            <scope>system</scope>
+            <systemPath>${java.home}/../lib/tools.jar</systemPath>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
