数据目录配置调整到外部配置，启动检查数据目录权限

--- a/src/main/resources/bin/extConfig.yml
+++ b/src/main/resources/bin/extConfig.yml
@@ -1,3 +1,8 @@
+jpom:
+  # jpom 数据存储路径
+  path: /jpom2/
+  # 是否已安全模式运行
+  safeMode: false
 whitelistDirectory:
   # 白名单目录是否验证包含关系
   checkStartsWith: true
