--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
             <artifactId>bcprov-jdk15on</artifactId>
             <version>1.61</version>
         </dependency>
-
+        <!--        文件编码识别-->
         <dependency>
             <groupId>net.sourceforge.jchardet</groupId>
             <artifactId>jchardet</artifactId>
