--- a/src/main/resources/bin/extConfig.yml
+++ b/src/main/resources/bin/extConfig.yml
@@ -9,7 +9,7 @@ whitelistDirectory:
 user:
   # 最多能创建多少个用户
   maxCount: 10
-  # 用户连续登录失败次数，超过此数将不再被允许登录，零是不限制
+  # 用户连续登录失败次数，超过此数将被限制登录
   alwaysLoginError: 5
 log:
   # 自动备份控制台日志，防止日志文件过大，目前暂只支持linux 不停服备份
