--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <common-boot.version>[1.2.0,1.2.99]</common-boot.version>
+
+        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
     </properties>
     <dependencies>
         <dependency>
@@ -47,6 +49,7 @@
             <artifactId>nginxparser</artifactId>
             <version>0.9.6</version>
         </dependency>
+        <!--   tools-->
         <dependency>
             <groupId>com.sun</groupId>
             <artifactId>tools</artifactId>
@@ -54,13 +57,13 @@
             <scope>system</scope>
             <systemPath>${java.home}/../lib/tools.jar</systemPath>
         </dependency>
-
+        <!--        证书解密-->
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
             <version>1.61</version>
         </dependency>
-        <!--        文件编码识别-->
+        <!--  文件编码识别-->
         <dependency>
             <groupId>net.sourceforge.jchardet</groupId>
             <artifactId>jchardet</artifactId>
@@ -69,6 +72,16 @@
     </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -85,8 +98,8 @@
                         <manifestEntries>
                             <!-- 项目版本号 -->
                             <Jpom-Project-Version>${project.version}</Jpom-Project-Version>
-                            <!-- 时间戳 -->
-                            <Timestamp>${maven.build.timestamp}</Timestamp>
+                            <!-- 打包时间 -->
+                            <Jpom-Timestamp>${maven.build.timestamp}</Jpom-Timestamp>
                         </manifestEntries>
                     </archive>
                 </configuration>
@@ -94,7 +107,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.1.1</version>
                 <configuration>
+                    <encoding>${project.build.sourceEncoding}</encoding>
                     <descriptors>
                         <descriptor>script/release.xml</descriptor>
                     </descriptors>
