--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
             <artifactId>jchardet</artifactId>
             <version>1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.199</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
