--- a/src/main/resources/bin/extConfig.yml
+++ b/src/main/resources/bin/extConfig.yml
@@ -1,6 +1,6 @@
 jpom:
-  # jpom 数据存储路径
-  path: /jpom/
+  # jpom 数据存储路径, 如果调试模式运行默认路径为【/jpom/】,安装运行默认为jar包文件的父级
+  path:
   # 是否已安全模式运行
   safeMode: false
 whitelistDirectory:
