--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.4.199</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
