--- a/modules/server/pom.xml
+++ b/modules/server/pom.xml
@@ -25,6 +25,13 @@
             <artifactId>common</artifactId>
             <version>${pom.version}</version>
         </dependency>
+
+        <!--websocket作为客户端-->
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.4.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
