--- a/modules/common/pom.xml
+++ b/modules/common/pom.xml
@@ -14,5 +14,12 @@
     <artifactId>common</artifactId>
     <version>2.3.2</version>
 
-
+    <dependencies>
+        <!--  文件编码识别-->
+        <dependency>
+            <groupId>net.sourceforge.jchardet</groupId>
+            <artifactId>jchardet</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 </project>
