--- a/modules/agent/src/main/resources/bin/extConfig.yml
+++ b/modules/agent/src/main/resources/bin/extConfig.yml
@@ -1,6 +1,11 @@
 jpom:
   # jpom 数据存储路径, 如果调试模式运行默认路径为【/jpom/】,安装运行默认为jar包文件的父级
   path:
+  authorize:
+    # agent 端管理账号，必填。
+    agentName: jpomAgent
+    # agent 端管理密码，非必填，如果为空Jpom 会自动生成一串随机字符串当密码
+    agentPwd:
 whitelistDirectory:
   # 白名单目录是否验证包含关系
   checkStartsWith: true
