--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
             <version>1.4.199</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
