--- a/modules/server/pom.xml
+++ b/modules/server/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <artifactId>jpom</artifactId>
         <groupId>cn.keepbx</groupId>
-        <version>2.3.2</version>
+        <version>2.3.3</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.keepbx.jpom</groupId>
     <artifactId>server</artifactId>
-    <version>2.3.2</version>
+    <version>2.3.3</version>
 
     <dependencies>
         <dependency>
@@ -31,6 +31,13 @@
             <groupId>org.java-websocket</groupId>
             <artifactId>Java-WebSocket</artifactId>
             <version>1.4.0</version>
+        </dependency>
+
+        <!--   数据库-->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.199</version>
         </dependency>
     </dependencies>
     <build>
