--- a/modules/agent/pom.xml
+++ b/modules/agent/pom.xml
@@ -12,7 +12,7 @@
     <groupId>cn.keepbx.jpom</groupId>
     <artifactId>agent</artifactId>
     <version>2.4.0</version>
-
+    <name>Jpom 插件端</name>
     <dependencies>
         <dependency>
             <groupId>cn.keepbx.jpom</groupId>
