--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <scope>compile</scope>
+            <version>1.18.8</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
