--- a/modules/server/pom.xml
+++ b/modules/server/pom.xml
@@ -39,6 +39,12 @@
             <artifactId>h2</artifactId>
             <version>1.4.199</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.jgit</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+            <version>5.4.0.201906121030-r</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
