--- a/modules/server/pom.xml
+++ b/modules/server/pom.xml
@@ -45,6 +45,19 @@
             <artifactId>org.eclipse.jgit</artifactId>
             <version>5.4.0.201906121030-r</version>
         </dependency>
+        <!--邮件-->
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.5.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.taobao.top</groupId>
+            <artifactId>top-api-sdk</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope>
+            <systemPath>${pom.parent.basedir}/lib/taobao-sdk-java-auto_1479188381469-20190711.jar</systemPath>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
