支持配置是否记录请求、响应日志

--- a/modules/server/src/main/resources/bin/extConfig.yml
+++ b/modules/server/src/main/resources/bin/extConfig.yml
@@ -8,3 +8,8 @@ user:
   alwaysLoginError: 5
   # 当ip连续登录失败，锁定对应IP时长，单位毫秒
   ipErrorLockTime: 60*60*5*1000
+consoleLog:
+  # 是否记录接口请求日志
+  reqXss: true
+  # 是否记录接口响应日志
+  reqResponse: true
