--- a/modules/agent/src/main/resources/bin/extConfig.yml
+++ b/modules/agent/src/main/resources/bin/extConfig.yml
@@ -18,3 +18,8 @@ log:
   saveDays: 7
   # 日志文件的编码格式，如果没有指定就自动识别，自动识别可能出现不准确的情况
   fileCharset:
+consoleLog:
+  # 是否记录接口请求日志
+  reqXss: true
+  # 是否记录接口响应日志
+  reqResponse: true
