--- a/modules/agent/pom.xml
+++ b/modules/agent/pom.xml
@@ -13,6 +13,9 @@
     <artifactId>agent</artifactId>
     <version>2.4.2</version>
     <name>Jpom 插件端</name>
+    <properties>
+        <start-class>cn.keepbx.jpom.JpomAgentApplication</start-class>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>cn.keepbx.jpom</groupId>
@@ -52,7 +55,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>cn.keepbx.jpom.JpomAgentApplication</mainClass>
+                            <mainClass>${start-class}</mainClass>
                             <!-- 是否指定项目classpath下的依赖 -->
                             <addClasspath>true</addClasspath>
                             <!-- 指定依赖的时候声明前缀 -->
@@ -68,7 +71,22 @@
                 </configuration>
             </plugin>
 
-
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <fork>true</fork>
+                    <mainClass>${start-class}</mainClass>
+                    <jvmArguments>-Dfile.encoding=UTF-8</jvmArguments>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
