停止也异步执行

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
     <groupId>cn.keepbx</groupId>
     <artifactId>Jpom</artifactId>
     <name>Jpom Java项目在线管理</name>
+    <description>
+        一款简而轻的低侵入式在线构建、自动部署、日常运维、项目监控软件
+    </description>
     <inceptionYear>2017</inceptionYear>
     <version>2.4.2</version>
     <properties>
