--- a/modules/common/pom.xml
+++ b/modules/common/pom.xml
@@ -9,7 +9,7 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <name>Jpom 公共模块</name>
     <groupId>cn.keepbx.jpom</groupId>
     <artifactId>common</artifactId>
     <version>2.4.2</version>
