--- a/modules/server/pom.xml
+++ b/modules/server/pom.xml
@@ -47,6 +47,13 @@
             <artifactId>org.eclipse.jgit</artifactId>
             <version>5.4.0.201906121030-r</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.tmatesoft.svnkit</groupId>
+            <artifactId>svnkit</artifactId>
+            <version>1.10.1</version>
+        </dependency>
+
         <!--邮件-->
         <dependency>
             <groupId>com.sun.mail</groupId>
