--- a/modules/server/src/main/resources/bin/extConfig.yml
+++ b/modules/server/src/main/resources/bin/extConfig.yml
@@ -1,6 +1,9 @@
 jpom:
   # jpom 数据存储路径, 如果调试模式运行默认路径为【/jpom/】,安装运行默认为jar包文件的父级
   path:
+  authorize:
+    # api接口请求token 长度要求大于等于6位，字母数字符号组合
+    token:
 user:
   # 最多能创建多少个用户
   maxCount: 10
